force-app/main/default/objects/Brand_Discount__c/Brand_Discount__c.object-meta.xml
<CustomObject>
    <description>Manage all brands and product discounts.</description>
    <label>Brand Discount</label>
    <nameField>
        <displayFormat>BD-{YYYY}-{MM}-{0000000000}</displayFormat>
        <label>Brand Discount Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brand Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>