force-app/main/default/objects/Brand_Discount__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Brand / Account</inlineHelpText>
    <label>Brand</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Cultivator, Distributor, Manufacturer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Brand Discounts</relationshipLabel>
    <relationshipName>Brand_Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>