force-app/main/default/objects/Brand_Discount__c/fields/Discount_Active__c.field-meta.xml
<CustomField>
    <fullName>Discount_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discount Active?</label>
    <type>Checkbox</type>
</CustomField>