force-app/main/default/objects/Brand_Discount__c/fields/Discount_End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Discount_End_DateTime__c</fullName>
    <label>Discount End DateTime</label>
    <type>DateTime</type>
</CustomField>