force-app/main/default/objects/Brand_Discount__c/fields/Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percentage__c</fullName>
    <inlineHelpText>Discount to be applied in products list price</inlineHelpText>
    <label>Discount Percentage</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>