force-app/main/default/objects/Brand_Discount__c/fields/Discount_Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Discount_Start_DateTime__c</fullName>
    <inlineHelpText>Date/Time where Discount to be Applied/Activated</inlineHelpText>
    <label>Discount Start DateTime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>