force-app/main/default/objects/Brand_Discount__c/fields/Producer__c.field-meta.xml
<CustomField>
    <fullName>Producer__c</fullName>
    <formula>Product_Name__r.Producer_Name__r.Name</formula>
    <label>Producer</label>
    <type>Text</type>
</CustomField>