force-app/main/default/objects/Brand_Discount__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Discount applied to product</inlineHelpText>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Brand Discounts</relationshipLabel>
    <relationshipName>Brand_Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>