force-app/main/default/objects/Brand_Discount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Discount_Percentage__c</columns>
    <columns>Discount_Active__c</columns>
    <columns>Discount_Start_DateTime__c</columns>
    <columns>Discount_End_DateTime__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Brand__c</columns>
    <columns>Brand_Name__c</columns>
    <columns>Producer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>